# 7-apis/internal/infra/webserver/handlers/product_handlers.go
@@ -88,6 +88,18 @@ func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(products)
 }
 
+// GetProduct    get product
+// @Summary      get product by id
+// @Description  get product by id
+// @Tags         products
+// @Accept       json
+// @Produce      json
+// @Param        id  path      string   true  "product id" Format(uuid)
+// @Success      200  {object}  entity.Product
+// @Failure      404
+// @Failure      500  {object}  Error
+// @Router       /products/{id} [get]
+// @Security     ApiKeyAuth
 func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -104,6 +116,18 @@ func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(p)
 }
 
+// UpdateProduct update product
+// @Summary      update product
+// @Description  update product
+// @Tags         products
+// @Accept       json
+// @Produce      json
+// @Param        id  path      string   true  "product id" Format(uuid)
+// @Param        request   body      dto.CreateProductInput   true  "product request"
+// @Success      201
+// @Failure      500  {object}  Error
+// @Router       /products/{id} [put]
+// @Security     ApiKeyAuth
 func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -135,6 +159,17 @@ func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNoContent)
 }
 
+// DeleteProduct delete product
+// @Summary      delete product
+// @Description  delete product
+// @Tags         products
+// @Accept       json
+// @Produce      json
+// @Param        id  path      string   true  "product id" Format(uuid)
+// @Success      201
+// @Failure      500  {object}  Error
+// @Router       /products/{id} [delete]
+// @Security     ApiKeyAuth
 func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
